# cabal

./: cabal.bootstrap.project  cabal.project
Cabal/: Cabal.cabal
Cabal-QuickCheck/: Cabal-QuickCheck.cabal
Cabal-QuickCheck/src/Test/QuickCheck/Instances/: Cabal.hs
Cabal-described/: Cabal-described.cabal
Cabal-hooks/src/Distribution/Simple/: SetupHooks.hs
Cabal-syntax/: Cabal-syntax.cabal
Cabal-syntax/src/Distribution/PackageDescription/: FieldGrammar.hs
Cabal-syntax/src/Distribution/Types/: BuildInfo.hs  BuildType.hs  Dependency.hs  PackageDescription.hs
Cabal-syntax/src/Distribution/Types/BuildInfo/: Lens.hs
Cabal-tests/tests/ParserTests/regressions/: Octree-0.5.expr  anynone.expr  big-version.expr  common-conditional.expr  common.expr  common2.expr  common3.expr  elif.expr  elif2.expr  encoding-0.8.expr  generics-sop.expr  hasktorch.expr  hidden-main-lib.expr  indentation.expr  indentation2.expr  indentation3.expr  issue-5055.expr  issue-5846.expr  issue-6083-a.expr  issue-6083-b.expr  issue-6083-c.expr  issue-6083-pkg-pkg.expr  issue-774.expr  jaeger-flamegraph.expr  leading-comma-2.expr  leading-comma.expr  libpq1.expr  libpq2.expr  mixin-1.expr  mixin-2.expr  mixin-3.expr  monad-param.expr  multiple-libs-2.expr  noVersion.expr  nothing-unicode.expr  shake.expr  spdx-1.expr  spdx-2.expr  spdx-3.expr  th-lift-instances.expr  (+2 more)
Cabal-tests/tests/UnitTests/Distribution/Simple/: Glob.hs
Cabal-tests/tests/UnitTests/Distribution/Utils/: Structured.hs
Cabal/src/Distribution/: Simple.hs
Cabal/src/Distribution/PackageDescription/: Check.hs
Cabal/src/Distribution/PackageDescription/Check/: Monad.hs  Paths.hs  Warning.hs
Cabal/src/Distribution/Simple/: Build.hs  Configure.hs  ConfigureScript.hs  Errors.hs  GHC.hs  Glob.hs  Haddock.hs  Register.hs  SrcDist.hs
Cabal/src/Distribution/Simple/GHC/: Build.hs  BuildGeneric.hs  BuildOrRepl.hs
Cabal/src/Distribution/Simple/Program/: Builtin.hs  Db.hs
Cabal/src/Distribution/Simple/Setup/: Config.hs
Cabal/src/Distribution/Simple/SetupHooks/: Errors.hs  Internal.hs  Rule.hs
Cabal/src/Distribution/Simple/Test/: ExeV10.hs
Cabal/src/Distribution/Types/: LocalBuildConfig.hs  LocalBuildInfo.hs
cabal-install/: cabal-install.cabal
cabal-install-solver/: cabal-install-solver.cabal
cabal-install-solver/src/Distribution/Solver/Modular/: Message.hs  Solver.hs  Tree.hs  Validate.hs
cabal-install/src/Distribution/Client/: CmdInstall.hs  CmdRepl.hs  Configure.hs  Dependency.hs  FileMonitor.hs  InLibrary.hs  Install.hs  JobControl.hs  Main.hs  ProjectConfig.hs  ProjectOrchestration.hs  ProjectPlanning.hs  RebuildMonad.hs  ScriptUtils.hs  Setup.hs  SetupWrapper.hs  SourceFiles.hs  VCS.hs
cabal-install/src/Distribution/Client/ProjectBuilding/: UnpackedPackage.hs
cabal-install/src/Distribution/Client/ProjectPlanning/: SetupPolicy.hs  Types.hs
cabal-install/tests/: IntegrationTests2.hs
cabal-install/tests/UnitTests/Distribution/Client/: ArbitraryInstances.hs  DescribedInstances.hs  FileMonitor.hs  Glob.hs
cabal-testsuite/: cabal-testsuite.cabal
cabal-testsuite/PackageTests/BuildToolPaths/: cabal.project  cabal.test.hs
cabal-testsuite/PackageTests/BuildToolPaths/custom-build-tool/: custom-build-tool.cabal
cabal-testsuite/PackageTests/BuildToolPaths/custom-build-tool/exe/: Main.hs
cabal-testsuite/PackageTests/BuildToolPaths/custom-build-tool/src/: CustomBuildTool.hs
cabal-testsuite/PackageTests/BuildToolPaths/package-with-build-tools/: SetupHooks.hs  package-with-build-tools.cabal
cabal-testsuite/PackageTests/BuildToolPaths/package-with-build-tools/exe/: Main.hs
cabal-testsuite/PackageTests/BuildToolPaths/package-with-build-tools/src/: CallCustomPp.hs
cabal-testsuite/PackageTests/BuildToolPaths/package-with-build-tools/test/: Main.hs
cabal-testsuite/PackageTests/BuildToolPaths/package-with-build-tools/tool/: Main.hs
cabal-testsuite/PackageTests/HooksPreprocessor/: cabal.project
cabal-testsuite/PackageTests/HooksPreprocessor/custom-build-tool/: custom-build-tool.cabal
cabal-testsuite/PackageTests/HooksPreprocessor/package-with-hooks/: SetupHooks.hs  package-with-hooks.cabal
cabal-testsuite/PackageTests/HooksPreprocessor/package-with-hooks/exe/: Main.hs
cabal-testsuite/PackageTests/HooksPreprocessor/package-with-hooks/src/: MyLib.hs-custompp
cabal-testsuite/PackageTests/HooksPreprocessor/package-with-hooks/test/: CallCustomPp.hs  Main.hs
cabal-testsuite/PackageTests/NewInstall/T7297/: CHANGELOG.md  T7297.cabal  setup.test.hs
cabal-testsuite/PackageTests/Regression/T9784/: T9784.cabal  cabal.test.hs
cabal-testsuite/PackageTests/SetupHooks/SetupHooksRecompilation/: SetupHooksRecompilation.cabal  cabal.project  cabal.test.hs
cabal-testsuite/PackageTests/SetupHooksBadDiff1/: setup-hooks-bad-diff1-test.cabal
cabal-testsuite/PackageTests/SetupHooksBadDiff2/: setup-hooks-bad-diff2-test.cabal
cabal-testsuite/PackageTests/SetupHooksC2HsRules/: SetupHooks.hs  setup-hooks-c2hs-rules-test.cabal
cabal-testsuite/PackageTests/SetupHooksCyclicRules/: SetupHooks.hs  setup-hooks-cyclic-rules-test.cabal
cabal-testsuite/PackageTests/SetupHooksDuplicateRuleId/: setup-hooks-duplicate-rule-id-test.cabal
cabal-testsuite/PackageTests/SetupHooksInvalidRuleOutputIndex/: SetupHooks.hs  setup-hooks-invalid-rule-output-index-test.cabal
cabal-testsuite/PackageTests/SetupHooksMissingRuleDep/: SetupHooks.hs  setup-hooks-missing-rule-dep-test.cabal
cabal-testsuite/PackageTests/SetupHooksMissingRuleRes/: SetupHooks.hs  setup-hooks-missing-rule-res-test.cabal
cabal-testsuite/PackageTests/SetupHooksRuleOrdering/: SetupHooks.hs  setup-hooks-rule-ordering-test.cabal
cabal-testsuite/PackageTests/SetupHooksUnusedRules/: SetupHooks.hs  setup-hooks-unused-rules-test.cabal
cabal-testsuite/src/Test/Cabal/: Prelude.hs
changelog.d/: pr-9969
doc/: buildinfo-fields-reference.rst  cabal-package-description-file.rst  index.rst
hooks-exe/: hooks-exe.cabal
hooks-exe/cli/Distribution/Client/SetupHooks/: CallHooksExe.hs
project-cabal/pkgs/: cabal.config
(+6 files in other folders)
