cabal-version: 3.0
name:          hooks-exe
version:       0.1
copyright:     2024, Cabal Development Team
license:       BSD-3-Clause
author:        Cabal Development Team <cabal-devel@haskell.org>
maintainer:    cabal-devel@haskell.org
homepage:      http://www.haskell.org/cabal/
bug-reports:   https://github.com/haskell/cabal/issues
synopsis:      cabal-install integration for Hooks build-type
description:
  Layer for integrating Hooks build-type with cabal-install
category:      Distribution
build-type:    Simple

extra-source-files:
  readme.md changelog.md

common warnings
  ghc-options: -Wall -Wcompat -Wnoncanonical-monad-instances -Wincomplete-uni-patterns -Wincomplete-record-updates
  if impl(ghc < 8.8)
    ghc-options: -Wnoncanonical-monadfail-instances
  if impl(ghc >=9.0)
    -- Warning: even though introduced with GHC 8.10, -Wunused-packages
    -- gives false positives with GHC 8.10.
    ghc-options: -Wunused-packages

-- Library that defines a hooks version, to ensure compatibility between the
-- hooks executable and the executable it communicates with.
library hooks-version
  import: warnings
  hs-source-dirs: version
  visibility: public

  build-depends:
    base
      >= 4.10 && < 4.20,
    Cabal-syntax, Cabal

  exposed-modules: Distribution.Client.SetupHooks.Version
  default-language: Haskell2010

-- Library imported by cabal-install to interface with an external
-- hooks executable.
library hooks-cli
  import: warnings
  hs-source-dirs: cli
  visibility: public

  build-depends:
    base
      >= 4.10     && < 4.20,
    bytestring
      >= 0.10.6.0 && < 0.13,
    filepath
      >= 1.4.0.0  && < 1.6 ,
    process
      >= 1.6.19.0 && < 1.8 ,
    Cabal-syntax, Cabal, hooks-version

  exposed-modules:    Distribution.Client.SetupHooks.CallHooksExe
  other-modules:      Distribution.Client.SetupHooks.CallHooksExe.Errors

  default-language: Haskell2010

-- Library used to create an external hooks executable
-- from a SetupHooks.hs module.
library
  import: warnings
  hs-source-dirs: exe

  build-depends:
    base
      >= 4.10     && < 4.20,
    bytestring
      >= 0.10.6.0 && < 0.13,
    containers
      >= 0.5.6.2  && < 0.8 ,
    process
      >= 1.6.19.0 && < 1.8 ,
    Cabal-syntax, Cabal, hooks-version

  exposed-modules:    Distribution.Client.SetupHooks.HooksExe
  other-modules:      Distribution.Client.SetupHooks.HooksExe.Errors

  default-language:
    Haskell2010
