cabal-version:      3.14
name:               package-with-hooks
version:            0.1.0.0
license:            BSD-3-Clause
author:             sheaf
maintainer:         sheaf
category:           Testing
build-type:         Simple
  --Hooks

common warnings
  ghc-options: -Wall

--custom-setup
--  import: warnings
--  setup-depends:
--    base >= 4.18 && < 5,
--    containers,
--    directory,
--    filepath,
--    Cabal,
--    Cabal-hooks,
--    hooks-exe

--library
--  import:           warnings
--  exposed-modules:  MyLib
--  autogen-modules:  MyLib
--  build-depends:    base >= 4.18 && < 5
--  hs-source-dirs:   src
--  default-language: Haskell2010
--  build-tool-depends:
--    custom-build-tool:custom-build-tool

test-suite package-with-hooks-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    CallCustomPp
  build-depends:
    base
      >= 4.18 && < 5,
    template-haskell
      >= 2.20 && < 3,
    process
  build-tool-depends:
    custom-build-tool:custom-build-tool
