cabal-version:   3.14
name:            SetupHooksRecompilation
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Hooks
extra-doc-files: CHANGELOG.md

custom-setup
    setup-depends: base, Cabal, Cabal-syntax, Cabal-hooks
    -- Note that we do not include hooks-exe in this cabal package.
    -- When using build-type: Hooks, an implicit setup dependency should be
    -- introduced in hooks-exe in order to construct the Setup.hs executable
    -- from the hooks.
    -- This softly doubles as a test for that.

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
